<resources>
    <string name="app_name" translatable="false">SmartBuy</string>

    <!-- Strings für Einstellungen-->
    <string name="stopwatchSettings">Stopwatch</string>
    <string name="stopwathdesc">Enables or Disables the stopping of time during a shopping</string>
    <string name="generally">Generally</string>
    <string name="title_einkauflisten_activitiy">Shopping List</string>
    <string name="title_activity_settings">Preferences</string>
    <string name="title_activity_vorauswahllisten">Preselection lists</string>
    <string name="title_activity_vorauswahllistenbearbeiten">Edit preselection lists</string>
    <string name="preselection">Preselection lists</string>
    <string name="einstellungen">Preferences</string>
    <string name="add">Add</string>

    <!-- Strings für startbildschirm_contextmenu-->
    <string name="Shopping_mode">Shopping mode</string>
    <string name="Change_Name">Change Name</string>
    <string name="Best_Time">Best time</string>
    <string name="Delete">Delete</string>
    <string name="Reset">Reset List</string>

    <!-- Strings für einkaufmodus-->
    <string name="title_activity_einkaufmodus">Shopping mode</string>

    <!-- Strings für bestzeitdialog-->
    <string name="bestTimeDialogTitle">Best time</string>
    <string name="bestTimeDialogTime" translatable="false">01:00:00</string>

    <!-- Strings für neue_einkaufsliste_dialog-->
    <string name="neue_einkaufsliste_dialog_hint">List Name                                                                 "</string>

    <!-- Strings für neues_produkt_dialog-->
    <string name="neues_produkt_dialog_hint">Product Name</string>
    <string name="neues_produkt_dialog_desc">Description</string>

    <!-- Strings für ueber_dialog-->
    <string name="ueber_dialog">Team project of Trier University of Applied Sciences</string>
    <string name="ueber">About</string>

    <!-- Strings für produkte-->
    <string name="battery">Battery</string>
    <string name="butter">Butter</string>
    <string name="fish">Fish</string>
    <string name="meat">Meat</string>
    <string name="vegetable">Vegetable</string>
    <string name="cheese">Cheese</string>
    <string name="lemonade">Lemonade</string>
    <string name="milk">Milk</string>
    <string name="fruit">Fruit</string>
    <string name="yogurt">Yogurt</string>

</resources>
