<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="smartbuy.teamproject.application.EinkaufslisteActivity">
    <item android:id="@+id/about"
        android:title="@string/ueber"
        app:showAsAction="never" />
    <item android:id="@+id/settings"
        android:title="@string/einstellungen"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/vorAuswahlliste"
        android:title="@string/preselection"
        android:orderInCategory="100"
        android:visible="true"
        app:showAsAction="never" />
    <item android:id="@+id/action_newProduct"
        android:icon="@drawable/ic_action_add_new"
        android:title="@string/add"
        android:visible="true"
        app:showAsAction="always" />
    <item android:id="@+id/action_delete_Einkaufliste"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/Delete"
        android:visible="false"
        app:showAsAction="never" />
</menu>
